@@ -15,8 +15,8 @@ my %export_for = (
 sub _init {
 	my ($self, %args) = @_;
 	$args{export} ||= $export_for{ $args{type} };
-	$self->SUPER::_init(%args);
 	$self->{autoimport} = defined $args{autoimport} ? $args{autoimport} : 1;
+	$self->SUPER::_init(%args);
 	return;
 }
 
