@@ -5,12 +5,11 @@ use warnings;
 
 use ExtUtils::Builder::Action::Command;
 
-use base qw/ExtUtils::Builder::Linker ExtUtils::Builder::Linker::COFF/;
+use base qw/ExtUtils::Builder::Linker::COFF/;
 
 sub _init {
 	my ($self, %args) = @_;
 	$args{ld} ||= ['link'];
-	$self->ExtUtils::Builder::Linker::_init(%args);
 	$self->ExtUtils::Builder::Linker::COFF::_init(%args);
 	return;
 }
